Fix #628 - Avoid horizontal scrollbar (Google Chrome and long words).

--- a/exe/webui/style/udl/content.css
+++ b/exe/webui/style/udl/content.css
@@ -55,7 +55,7 @@ section.previousnext{display:none}
 .iDeviceTitle{font-size:1.4em;display:inline;font-weight:normal;vertical-align:middle;top:0;color:#2E2E2E;letter-spacing:.5px;font-weight:bold}
 .iDeviceTitle:before{content:" ";display:block;width:15px;height:15px}
 /* iDevice content */
-.iDevice_content{overflow:auto;text-align:left}
+.iDevice_content{word-wrap:break-word;overflow:auto;text-align:left}
 /*.iDevice_inner*/
 .iDevice_inner{padding:10px 20px 20px 20px;background:#fff;box-shadow:0px 18px 16px -6px rgba(0,0,0,0.37);border-radius:20px;border:4px solid #0065AB}
 .iDeviceTitle{color:#0065AB}
